--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,40 @@
+.inline-block {
+  display: inline-block; }
 
+.instruction-image-container {
+  width: 100%; }
+  .instruction-image-container img {
+    display: block;
+    width: 100%;
+    height: auto; }
+
+.instruction {
+  border: 1px solid #acacac; }
+
+.nav-wrapper {
+  padding-left: 15px; }
+
+.recipe-heading {
+  font-size: 18px; }
+
+.instruction .col.s4 {
+  padding-right: 0; }
+
+.ingredient-popup-card {
+  display: none;
+  position: fixed;
+  width: 65%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.ingredient-popup-hiddendiv {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000; }
 
 /*# sourceMappingURL=master.css.map */
