--- a/css/master.sass
+++ b/css/master.sass
@@ -11,6 +11,10 @@
 .instruction
 	border: 1px solid #acacac 
 	
+.row.instruction
+	margin-left: 0
+	margin-right: 0
+	
 .nav-wrapper
 	padding-left: 15px
 	
@@ -36,4 +40,5 @@
 	top: 0
 	left: 0
 	z-index: 1000
+	
 	
