--- a/css/lexicon.css
+++ b/css/lexicon.css
@@ -1,24 +1,15 @@
-.wordclound {
-	margin-top: 20;
-	padding: 10;
-	border: 1px solid;
-	width: 400
-}
-
 .word {
-	padding: 2;
-	margin: 2;
-	border: 1px solid;
-	background: silver;
+	padding: 2px 8px;
+	margin: 2px;
 	display:inline-block
 }
 
 .correct_choice {
-	color: green
+    background-color: #9fa;
 }
 
 .wrong_choice {
-	color: red
+    background-color: #EF9A9A;
 }
 
 .gap {
