--- a/css/master.css
+++ b/css/master.css
@@ -43,15 +43,13 @@
 
 .lexicon-image {
   position: relative; }
-  .lexicon-image .correct_choice,
-  .lexicon-image .wrong_choice {
+  .lexicon-image img {
+    width: 100%; }
+  .lexicon-image .word {
     display: block;
-    background-color: rgba(255, 255, 255, 0.6);
     text-align: center;
-    padding-top: 3em;
     position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%; }
+    top: 50%;
+    left: 50%; }
 
 /*# sourceMappingURL=master.css.map */
