--- a/css/master.sass
+++ b/css/master.sass
@@ -1,3 +1,5 @@
+@import dragndrop.sass
+
 .inline-block
 	display: inline-block
 
@@ -51,18 +53,3 @@
 	left: 0
 	padding: 2px 4px 2px 4px
 	border-radius: 7px
-	
-	
-.lexicon-image
-	position: relative
-
-	img
-		width: 100%
-
-	.word
-		display: block
-		text-align: center
-		position: absolute
-		top: 50%
-		left: 50%
-		transform: translate(-50%, -50%)
