Unified dragndrop game code

--- a/css/dragndrop.sass
+++ b/css/dragndrop.sass
@@ -9,7 +9,7 @@
 .wrong_choice
   background-color: #EF9A9A
 
-.lexicon-image
+.lexicon-game .word-drop
   position: relative
 
   img
@@ -23,7 +23,7 @@
     left: 50%
     transform: translate(-50%, -50%)
 
-.word-gap
+.gaps-game .word-drop
   display: inline-block
   width: 8em
   height: 2em
