--- a/css/master.css
+++ b/css/master.css
@@ -9,11 +9,11 @@
 .wrong_choice {
   background-color: #EF9A9A; }
 
-.lexicon-image {
+.lexicon-game .word-drop {
   position: relative; }
-  .lexicon-image img {
+  .lexicon-game .word-drop img {
     width: 100%; }
-  .lexicon-image .word {
+  .lexicon-game .word-drop .word {
     display: block;
     text-align: center;
     position: absolute;
@@ -21,14 +21,14 @@
     left: 50%;
     transform: translate(-50%, -50%); }
 
-.word-gap {
+.gaps-game .word-drop {
   display: inline-block;
   width: 8em;
   height: 2em;
   border-bottom: thin solid silver;
   background-color: cornsilk;
   vertical-align: bottom; }
-  .word-gap .word {
+  .gaps-game .word-drop .word {
     width: 100%;
     text-align: center;
     margin: 0 auto;
