--- a/css/master.css
+++ b/css/master.css
@@ -68,22 +68,27 @@
 .instruction .col.s4 {
   padding-right: 0; }
 
-.ingredient-popup-card {
-  display: none;
+.popup-card, .ingredient-popup-card {
   position: fixed;
   width: 65%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); }
 
-.ingredient-popup-hiddendiv {
-  display: none;
+.popup-blur, .ingredient-popup-hiddendiv {
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 1000; }
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.4); }
+
+.ingredient-popup-card {
+  display: none; }
+
+.ingredient-popup-hiddendiv {
+  display: none; }
 
 .train-recipe-button {
   position: fixed;
