--- a/css/master.css
+++ b/css/master.css
@@ -74,8 +74,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1001;
-  pointer-events: none; }
+  z-index: 1001; }
 
 .popup-blur, .ingredient-popup-hiddendiv {
   position: fixed;
